# note-taker

./: components.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Homepage.css  Homepage.tsx  Sidebar.tsx  main.tsx  utils.tsx
src-tauri/: .envrc  .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  file_cache.rs  lib.rs  main.rs  state.rs  tree.rs  webdav.rs  webdav_frontend_bindings.rs
src-tauri/tests/: test.rs
src/components/: ContextMenu.tsx  SidebarItems.tsx
src/components/editor/: transforms.ts
src/components/ui/: ai-toolbar-button.tsx  align-toolbar-button.tsx  block-discussion.tsx  block-list-static.tsx  block-selection.tsx  block-suggestion.tsx  blockquote-node-static.tsx  callout-node-static.tsx  callout-node.tsx  caption.tsx  code-block-node-static.tsx  code-block-node.tsx  code-node-static.tsx  code-node.tsx  column-node-static.tsx  column-node.tsx  comment-node-static.tsx  comment-node.tsx  comment-toolbar-button.tsx  comment.tsx  date-node-static.tsx  editor-static.tsx  editor.tsx  emoji-node.tsx  emoji-toolbar-button.tsx  equation-node-static.tsx  equation-node.tsx  equation-toolbar-button.tsx  excalidraw-node.tsx  export-toolbar-button.tsx  fixed-toolbar-buttons.tsx  floating-toolbar-buttons.tsx  floating-toolbar.tsx  font-size-toolbar-button.tsx  heading-node-static.tsx  heading-node.tsx  highlight-node-static.tsx  highlight-node.tsx  history-toolbar-button.tsx  hr-node-static.tsx  (+45 more)
src/hooks/: use-debounce.ts  use-mounted.ts  useContextMenu.ts
