[package]
name = "note-taker"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "note_taker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
tauri-plugin-fs = "2"
regex = "1.12.2"
reqwest_dav = "0.3.3"
tokio = {version = "1.50.0", features = ["full"]}
tokio-macros = "2.6.1"
keyring = "4.0.0"
log = "0.4.29"

[dev-dependencies]
lazy_static = "1.5.0"
